Replace Character constructor (deprecated on Java 9+) calls in tests with Character#valueOf.